crates/eure-macros/tests/compile_pass/into_eure_default_crate.rs
use eure::document::EureDocument;
use eure_macros::IntoEure;

#[derive(IntoEure)]
struct Config {
    name: String,
}

fn main() {
    let _ = EureDocument::new();
}
