crates/eure-macros/tests/compile_fail/allow_unknown_fields_on_newtype_variant.rs
use eure::FromEure;

#[derive(FromEure)]
enum Test {
    #[eure(allow_unknown_fields)]
    Newtype(String),
}

fn main() {}
